--- a/style.css
+++ b/style.css
@@ -107,3 +107,28 @@ nav ul {
     padding: 2rem 5rem;
     box-shadow: 0px 10px 10px rgba(255, 255, 255, 0.3);
 }
+
+/* Media queries */
+
+@media screen and (max-width: 1500px) {
+    html {
+        font-size: 55%;
+    }
+}
+
+@media screen and (max-width: 1320px) {
+    #logo-container {
+        justify-content: center;
+    }
+
+    #logo {
+        padding-top: 3rem;
+        box-sizing: content-box;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    nav ul {
+        display: none;
+    }
+}
