--- a/style.css
+++ b/style.css
@@ -13,9 +13,11 @@ html {
 
 h2 {
     font-size: 6.4rem;
+    color: rgb(83, 44, 69);
 }
 
-h3 {
+h3,
+p {
     font-size: 2.4rem;
 }
 
@@ -34,21 +36,21 @@ button {
     padding: 2rem 8rem;
     border: none;
     transition: 1s ease-in-out;
-    background-color: rgb(43, 44, 69);
+    background-color: rgb(83, 44, 69);
     color: white
 }
 
 button:hover {
     cursor: pointer;
-    background-color: white;
-    color: rgb(43, 44, 69);
+    background-color: rgb(73, 116, 133);
+    color: white;
     box-shadow: 5px 5px 15px rgba(43, 44, 69, 0.2), -5px 0px 10px rgba(43, 44, 69, 0.2);;
 }
 
 /* Navigation styling */
 
 .main-head {
-    background-color: rgb(82, 125, 169);
+    background-color: rgb(83, 44, 69);
 }
 
 nav {
@@ -94,18 +96,101 @@ nav ul {
 }
 
 .hero h2 {
-    color: rgb(43, 44, 69);;
+    padding-top: 2rem;
 }
 
 .hero h3 {
     padding: 3rem;
-    color: rgb(43, 44, 69);
 }
 
 .hero-wrapper {
+    position: relative;
+    border-radius: 20px;
+    width: 90%;
     background-color: rgba(255, 255, 255, 0.7);
-    padding: 2rem 5rem;
     box-shadow: 0px 10px 10px rgba(255, 255, 255, 0.3);
+}
+
+.hero button {
+    width: 100%;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+/* About section */
+
+#about-section {
+    overflow: hidden;
+    position: relative;
+    min-height: 100vh;
+    background: url(./images/about-img.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#about-wrapper {
+    min-height: 100vh;
+    margin-left: 5vw;
+    width: 61.67vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 10px 10px rgba(255, 255, 255, 0.3);
+    text-align: center;
+}
+
+#quotes-btn {
+    align-self: center;
+    border-radius: 20px;
+}
+
+#about-section h2 {
+    text-decoration: underline;
+    text-decoration-color: rgb(83, 44, 69);
+    text-decoration-thickness: .7rem;
+}
+
+#about-section p {
+    padding: 3rem;
+}
+
+#sun {
+    position: absolute;
+    max-width: 50%;
+    right: 0;
+    animation: sunAnimation 3s ease-in-out infinite alternate;
+}
+
+#sid {
+    position: absolute;
+    max-width: 15%;
+    bottom: 0;
+    right: 25%;
+    animation: sidAnimation 2s ease-in-out infinite alternate;
+}
+
+@keyframes sunAnimation {
+    from {
+        transform: translateX(-15%);
+        opacity: .5;
+    }
+    to {
+        transform: translateX(30%);
+        opacity: 1;
+    }
+}
+
+@keyframes sidAnimation {
+    from {
+        transform: scale(.9);
+        opacity: 1;
+    }
+    to {
+        transform: scale(0.8);
+        opacity: .6;
+    }
 }
 
 /* Media queries */
